# qpml

./: .gitignore  Cargo.toml  README.md
dev/: make-examples.sh
docs/: README.md
examples/: example1.dot  example1.yaml  example2.yaml  minimal.dot  minimal.md  minimal.qpml  minimal.yaml  nested-join.dot  nested-join.yaml  spark-plan.dot  spark-plan.qpml  spark-plan.txt
src/: lib.rs  main.rs
testdata/: plan.txt  test.csv
