[package]
name = "qpml"
description = "Query Plan Markup Language (QPML)"
version = "0.2.0"
license = "Apache-2.0"
homepage = "https://github.com/andygrove/qpml"
repository = "https://github.com/andygrove/qpml"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = { version = "0.3", default-features = false }